--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -1,35 +1,25 @@
-.container {
-	position: relative;
-    top: 100px;
-	width: 100px;
-	&:hover .overlay {
-		height: 100px;
+.modalMovie {
+	background: #000;
+	width: 230px;
+	height: 345px;
+	margin-bottom: 50px;
+	border-radius: 10px;
+	cursor: pointer;
+    z-index: 100;
+	&__img {
+		border-radius: 10px;
+		width: 100%;
+		transition: 0.5s;
+		&:hover {
+			box-shadow: #00ffc4 0px 0px 10px;
+		}
 	}
 }
-.image {
-	display: block;
-	width: 100%;
-	height: auto;
-}
-.overlay {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: #008cba;
-	overflow: hidden;
-	width: 100%;
-	height: 0;
-	transition: 0.5s ease;
-	.text {
-		white-space: nowrap;
-		color: white;
-		font-size: 20px;
-		position: absolute;
-		overflow: hidden;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		-ms-transform: translate(-50%, -50%);
-	}
+.tooltipModal {
+	margin-top: 100px;
+    margin-left: -50px;
+    padding: 10px;
+    width: 200px;
+	border-radius: 5px;
+    background: red;
 }
