--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,10 @@
-.home{
-    color: #000;
-    height: 1000px;
-    width: 100%;
+.home {
+    background-image: linear-gradient(#000, #182832);
+	color: #000;
+	width: 100%;
+	padding: 0px 100px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+    margin-top: -70px;
 }
