--- a/src/components/carousel/item-carousel/Item.scss
+++ b/src/components/carousel/item-carousel/Item.scss
@@ -5,28 +5,28 @@
 	padding: 30px;
 	.trailer {
 		width: 100%;
-		height: 100%;
+		height: 850px;
 		position: absolute;
-		top: 46%;
+		top: 50%;
 		left: 50%;
 		object-fit: cover;
 		transform: translate(-50%, -50%);
 		z-index: 1;
 	}
 	.bg {
-		box-shadow: rgb(0, 0, 0) 0px -150px 36px -48px inset;
+		box-shadow: rgb(0, 0, 0) 0px -109px 36px -48px inset;
 		position: absolute;
 		background: rgba(0, 0, 0, 0.177);
 		width: 100%;
-		height: 100%;
+		height: 850px;
 		z-index: 2;
-		top: 50%;
+		top: 38%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 	}
 	.pre-detail {
 		position: absolute;
-		top: 50%;
+		top: 45%;
 		left: 0;
 		width: 50%;
 		height: 70%;
