--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -1,25 +1,89 @@
 .modalMovie {
-	background: #000;
+	background: #0c2738;
 	width: 230px;
-	height: 345px;
-	margin-bottom: 50px;
-	border-radius: 10px;
+	height: 315px;
+	margin-bottom: 65px;
+	border-radius: 5px;
+	z-index: 10;
 	cursor: pointer;
-    z-index: 100;
-	&__img {
-		border-radius: 10px;
-		width: 100%;
-		transition: 0.5s;
-		&:hover {
-			box-shadow: #00ffc4 0px 0px 10px;
+	&__detail {
+		display: none;
+		color: rgb(255, 255, 255);
+		padding: 7px;
+		padding-bottom: 15px;
+		&-vote {
+			color: #e7e247;
+			position: absolute;
+			top: 20px;
+			right: 0;
+			background: #000;
+			border-bottom-left-radius: 5px;
+			border-top-left-radius: 5px;
+			padding: 1px 7px;
+			font-size: 12px;
+		}
+		&-ttl {
+			color: #e7e247;
+			font-size: 20px;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+		&-decs {
+			font-size: 12px;
+		}
+		&-btn {
+			align-items: center;
+			background-color: #fff;
+			border: 1px solid rgba(0, 0, 0, 0.1);
+			border-radius: 0.25rem;
+			box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+			box-sizing: border-box;
+			color: #000;
+			transition: all 250ms;
+			width: 100%;
+			cursor: pointer;
+			height: 40px;
+			&:hover {
+				transform: translateY(-3px);
+			}
+			&:hover,
+			&:focus {
+				border-color: rgba(0, 0, 0, 0.15);
+				box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+				color: #000;
+				font-weight: 600;
+			}
+			&:active {
+				background-color: #f0f0f1;
+				border-color: rgba(0, 0, 0, 0.15);
+				box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+				color: rgba(0, 0, 0, 0.65);
+				transform: translateY(0);
+			}
 		}
 	}
+	transition: all 0.75s;
+	&:hover {
+		box-shadow: #38a7ec 0px 0px 10px;
+		transform: scale(1.2);
+		z-index: 20;
+		.modalMovie__img {
+			height: 50%;
+			width: 100%;
+			border-radius: 5px;
+			object-fit: cover;
+			padding: 7px;
+		}
+		.modalMovie__detail {
+			display: block;
+		}
+	}
+	&__img {
+		border-radius: 5px;
+		width: 100%;
+		height: 100%;
+	}
 }
-.tooltipModal {
-	margin-top: 100px;
-    margin-left: -50px;
-    padding: 10px;
-    width: 200px;
-	border-radius: 5px;
-    background: red;
-}
+
+
