--- a/src/components/back-to-top/BackToTop.scss
+++ b/src/components/back-to-top/BackToTop.scss
@@ -13,13 +13,16 @@
 	padding: 0;
 	display: block;
 	text-align: center;
-	background-color: #00ffc4;
+	background-color: #00ffc3;
 	color: #0c2738;
 	border-radius: 50%;
 	outline: none;
 	border: none;
+	opacity: 0.5;
 	&:hover {
 		transform: translate3d(0, 5px, 0);
-		color: #fff;
+		background-color: #00ffc3 !important;
+		color: #0c2738 !important;
+		opacity: 1;
 	}
 }
