--- a/src/components/carousel/item-carousel/Item.scss
+++ b/src/components/carousel/item-carousel/Item.scss
@@ -37,16 +37,41 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		@media (max-width: 991px) {
+			width: 60%;
+		}
+		@media (max-width: 670px) {
+			width: 80%;
+		}
+		@media (max-width: 600px) {
+			width: 100%;
+            padding: 0 20px;
+		}
 		.title {
 			width: 100%;
 			font-size: 40px;
 			margin: 0;
+			@media (max-width: 991px) {
+				font-size: 30px;
+			}
+			@media (max-width: 600px) {
+				font-size: 25px;
+			}
+			@media (max-width: 450px) {
+				font-size: 18px;
+			}
 		}
 		.decs {
 			width: 90%;
 			line-height: 30px;
 			margin: 30px 0;
 			font-size: 19px;
+			@media (max-width: 991px) {
+				font-size: 15px;
+			}
+			@media (max-width: 600px) {
+				font-size: 13px;
+			}
 		}
 		.btn-crs {
 			height: 50px;
@@ -60,6 +85,15 @@
 				transition: 0.3s;
 				border-radius: 5px;
 				font-size: 15px;
+				@media (max-width: 991px) {
+					width: 45%;
+					height: 90%;
+					font-size: 13px;
+				}
+				@media (max-width: 500px) {
+					width:45%;
+					height: 70%;
+				}
 			}
 			.btn-watch {
 				font-weight: 600;
@@ -89,6 +123,9 @@
 				box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 				.fa-stack {
 					font-size: 15px;
+                    @media (max-width: 500px) {
+					font-size: 12px;
+				}
 				}
 				&:hover {
 					color: #0c2738;
