--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -23,7 +23,7 @@
 			align-items: center;
 			justify-content: space-evenly;
 			padding: 30px;
-			height: 300px;
+			height: 100%;
 			width: 70%;
 			margin: 0 auto;
 			.section-footer {
@@ -31,20 +31,31 @@
 				display: flex;
 				flex-direction: column;
 				a {
+					display: flex;
+					align-items: center;
 					color: #00ffc4;
 					margin-bottom: 20px;
 				}
+				img {
+					filter: invert(21%) sepia(69%) saturate(754%)
+						hue-rotate(96deg) brightness(107%) contrast(101%);
+					width: 19px;
+					height: 19px;
+				}
 			}
-		}
-		.botom-footer {
-			padding: 60px 0;
-			border-top: 1px solid #dddddd58;
-			font-weight: 100;
-			text-align: center;
-            font-size: 15px;
-			a {
-				color: #00ffc4;
-                text-decoration: underline;
+			@media (max-width: 670px) {
+				font-size: 14px;
+			}
+			@media (max-width: 541px) {
+				flex-direction: column;
+				font-size: 13px;
+				align-items: flex-start;
+				justify-content: center;
+				padding-left: 70px;
+			}
+			@media (max-width: 365px) {
+				font-size: 12px;
+				padding-left: 45px;
 			}
 		}
 	}
