--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,31 +1,100 @@
-.header {
-	padding: 20px 70px;
+.header-wrap {
+	width: 100%;
 	background: #0c2738e4;
-	color: #fff;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	font-size: 18px;
-	transition: 0.5s;
+	.header {
+		padding: 10px 0;
+		color: #fff;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		font-size: 18px;
+		transition: 0.5s;
+		position: relative;
+		@media (max-width: 576px) {
+			padding: 20px;
+		}
+		@media (max-width: 991px) {
+			margin: 0 auto;
+		}
+	}
 	.nav-menu {
 		width: 40%;
 		display: flex;
 		justify-content: space-between;
-		.textCl {
-			padding: 10px 18px;
-			color: #3d6888;
-			border-radius: 4px;
-			&:hover {
-				color: #00ffc4;
-				transition: 0.3s;
+		@media (max-width: 991px) {
+			display: none;
+		}
+	}
+	.textCl {
+		padding: 10px 18px;
+		color: #fff;
+		border-radius: 4px;
+		&:hover {
+			color: #00ffc4;
+			transition: 0.1s;
+			img {
+				filter: invert(21%) sepia(69%) saturate(754%) hue-rotate(96deg)
+					brightness(107%) contrast(101%);
 			}
 		}
-		.active {
-			background: #254258;
-			color: #00ffc4;
+		img {
+			width: 30px;
+			height: 30px;
+			margin-right: 20px;
+		}
+	}
+	.active {
+		color: #00ffc4;
+		@media (max-width: 991px) {
+			border-radius: 0;
+			border-bottom: 1px solid #00ffc4;
+		}
+		img {
+			filter: invert(21%) sepia(69%) saturate(754%) hue-rotate(96deg)
+				brightness(107%) contrast(101%);
+		}
+	}
+	.headerMB {
+		color: #fff;
+		font-size: 25px;
+		text-align: right;
+		display: none;
+		width: 100%;
+		@media (max-width: 991px) {
+			display: block;
+		}
+	}
+	@keyframes moveNav {
+		0% {
+			right: -100px;
+		}
+		100% {
+			right: 0;
+		}
+	}
+	.nav-menuMB {
+		width: 50%;
+		height: 1000px;
+		padding: 30px 20px;
+		position: absolute;
+		top: 60px;
+		right: 0;
+		text-align: left;
+		backdrop-filter: blur(10px);
+		background-color: #0c27385e;
+		animation: moveNav 0.25s ease-out;
+		@media (max-width: 600px) {
+			width: 100%;
+		}
+		&__item {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			height: 25%;
 		}
 	}
 }
+
 .none {
 	height: 0;
 	opacity: 0;
