--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -2,12 +2,23 @@
 	position: relative;
 	background: #0c2738;
 	height: 850px;
+	@media (max-width: 446px) {
+		height: 750px;
+	}
 	.wrap-contact {
-		position: absolute;
+		position: relative;
 		z-index: 10;
 		font-size: 22px;
-		padding: 100px 120px 0;
+		padding: 100px 0 0;
+		@media (max-width: 576px) {
+			padding: 10%;
+		}
 		.form-contact {
+			div:first-child {
+				@media (max-width: 446px) {
+					flex-direction: column;
+				}
+			}
 			button {
 				margin-top: 40px;
 				border-radius: 8px;
@@ -33,6 +44,11 @@
 			text-transform: uppercase;
 			color: #00ffc4;
 			font-family: 'Catamaran', sans-serif;
+			@media (max-width: 446px) {
+				line-height: 28px;
+				margin-bottom: 20px;
+				font-size: 16px;
+			}
 		}
 		h5 {
 			margin-bottom: 30px;
@@ -41,9 +57,17 @@
 			font-size: 120px;
 			line-height: 100px;
 			font-weight: 900;
+			@media (max-width: 992px) {
+				font-size: 70px;
+			}
+			@media (max-width: 446px) {
+				line-height: 70px;
+				font-size: 40px;
+			}
 		}
 	}
 	.BG {
+		position: absolute;
 		top: 0;
 		width: 100%;
 		height: 100%;
@@ -63,9 +87,15 @@ $gray: #9b9b9b5d;
 	margin-top: 10px;
 	width: 374px;
 	margin-right: 50px;
+	@media (max-width: 992px) {
+		width: 100%;
+	}
 	textarea {
 		width: 800px;
 		height: 150px;
+		@media (max-width: 992px) {
+			width: 100%;
+		}
 	}
 }
 
