--- a/src/pages/discovery/discovery.scss
+++ b/src/pages/discovery/discovery.scss
@@ -5,8 +5,18 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		@media (max-width: 767px) {
+			flex-direction: column;
+			margin-bottom: 180px;
+		}
 		&-imgwrap {
 			position: relative;
+			@media (max-width: 991px) {
+				top: 30px;
+			}
+			@media (max-width: 767px) {
+				top: 100px;
+			}
 		}
 		&-img {
 			position: relative;
@@ -15,16 +25,28 @@
 			object-fit: cover;
 			padding-left: 80px;
 			z-index: 20;
+			@media (max-width: 991px) {
+				padding: 0px;
+			}
 		}
 		&-imgBG {
 			z-index: 10;
 			position: absolute;
 			top: -50px;
-			left: 26px;
-			width: 400px;
-			height: 400px;
+			left: -30px;
+			width: 135%;
+			height: 135%;
 			transform: translatey(0px);
 			animation: float 4s ease-in-out infinite;
+			@media (max-width: 991px) {
+				left: -50px;
+			}
+			@media (max-width: 420px) {
+				width: 100%;
+				height: 100%;
+				left: 0px;
+                top: 0;
+			}
 			@keyframes float {
 				0% {
 					transform: translatey(0px);
@@ -59,12 +81,27 @@
 				&:hover {
 					opacity: 1;
 				}
+				@media (max-width: 767px) {
+					display: none;
+				}
 			}
 			.wavy {
 				position: relative;
 				-webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
 				font-size: 45px;
 				top: 100px;
+				@media (max-width: 1199px) {
+					font-size: 38px;
+				}
+				@media (max-width: 991px) {
+					font-size: 25px;
+				}
+				@media (max-width: 767px) {
+					font-size: 35px;
+				}
+				@media (max-width: 505px) {
+					font-size: 20px;
+				}
 			}
 			.wavy span {
 				font-family: 'Alfa Slab One', cursive;
@@ -105,9 +142,33 @@
 			opacity: 1;
 			border-top: 1.5px dashed #00ffc4;
 		}
+		@media (max-width: 991px) {
+			font-size: 20px;
+			img {
+				width: 30px;
+				height: 30px;
+			}
+			hr {
+				width: 60%;
+			}
+		}
+		@media (max-width: 767px) {
+			font-size: 17px;
+		}
+		@media (max-width: 505px) {
+			font-size: 15px;
+			hr {
+				width: 40%;
+			}
+		}
 	}
 	li {
 		width: 230px !important;
+	}
+	.react-multi-carousel-list {
+		box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+			rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+			rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 	}
 	.react-multiple-carousel__arrow {
 		border-radius: 0;
