--- a/src/components/back-to-top/BackToTop.scss
+++ b/src/components/back-to-top/BackToTop.scss
@@ -10,7 +10,7 @@
 	font-size: 30px;
 	width: 50px;
 	height: 50px;
-	padding: 0;
+	padding-bottom: 1px;
 	display: block;
 	text-align: center;
 	background-color: #00ffc3;
