--- a/src/App.scss
+++ b/src/App.scss
@@ -52,7 +52,7 @@ a {
 }
 
 .bars-7 {
-	margin: 0 auto;
+	margin: 100px auto;
 	width: 45px;
 	aspect-ratio: 0.75;
 	--c: no-repeat linear-gradient(#00ffc4 0 0);
